# eo-dmi-geoserver-cloud-alz

./: .checkov.yaml  .editorconfig  .gitignore  .tflint.hcl  AGENTS.md  README.md  mise.toml
.github/: dependabot.yml
.github/workflows/: cd-dev.yml  cd-prod.yml  cd-test.yml  ci.yml  terraform-deploy.yml
deployment-config/: README.md  gateway-webflux.yml  geoserver.yml  geoserver_spring.yml  jndi.yml
docs/: architecture.md  node-oidc-proxy-contract.md  runbook.md
geo-server-app-config/: .gitignore  README.md  catalog_schema.py  geoserver_apply.py  geoserver_catalog_schema.py  geoserver_client.py  pyproject.toml  reconcile.py
geo-server-app-config/catalog/: acl_rules.yaml  layer_groups.yaml  layers.yaml  stores.yaml  workspaces.yaml
geo-server-app-config/catalog/styles/: basic_polygon.sld
geo-server-app-config/environments/: dev.yaml  prod.yaml  test.yaml  tools.yaml
geo-server-app-config/tests/: test_acl_rules.py
infra/deployment-config/: gateway.yml  geoserver_logging.yml
infra/scripts/: configure-geoserver-security.sh  tf.sh
infra/stack/: main.tf  (+2 more)
integration-tests/: conftest.py  pyproject.toml  test_01_proxy.py  test_02_ows.py  test_03_catalog.py  test_04_rendering.py  test_05_security.py
node-oidc-proxy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
openspec/: config.yaml
scripts/: configure-geoserver-security.sh  tf.sh  wait-for-dns-zone.sh
stack/: .terraform.lock.hcl  backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  rabbitmq-storage.tf  variables.tf  versions.tf
(+73 files in other folders)
