[project]
name = "geoserver-integration-tests"
version = "0.1.0"
description = "End-to-end integration tests for GeoServer Cloud on Azure Container Apps"
requires-python = "==3.14.*"
dependencies = [
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.8",
    "httpx[socks]>=0.27",
    "pytest>=8.2",
    "requests[socks]>=2.34.2",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short -p no:warnings"
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
